--- a/registration-form/src/App.css
+++ b/registration-form/src/App.css
@@ -1,5 +1,5 @@
 *{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family:'Times New Roman', Times, serif;
   font-weight: bold;
 }
 
@@ -9,24 +9,24 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #2c3e50; /* Dark background color */
+  background-color: #2c3e50; 
 }
 
 form {
   width: 350px;
-  border: 1px solid #3498db;
+  border: 5px solid #000000;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  background-color: #34495e; /* Darker form background color */
-  color: #ecf0f1; /* Light text color */
+  background-color: #0080ff; 
+  color: #00ccff; 
   transition: background-color 0.3s ease;
 }
 
 label {
   display: block;
   margin-bottom: 8px;
-  color: #3498db;
+  color: #ffffff;
 }
 
 input {
@@ -34,22 +34,22 @@ input {
   width: 95%;
   padding: 8px;
   margin-bottom: 16px;
-  border: 1px solid #3498db;
+  border: 1px solid #006eb7;
   border-radius: 3px;
-  background-color: #2c3e50; /* Dark input background color */
-  color: #ecf0f1; /* Light text color */
+  background-color: #000000; 
+  color: #ecf0f1; 
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 input:hover {
-  background-color: #34495e; /* Darker input background color on hover */
-  color: #3498db; /* Change text color on hover */
+  background-color: #ffffff; 
+  color: #000000; 
 }
 
 p {
   color: #e74c3c;
-  margin-top: 0;
   margin-bottom: 16px;
+  margin-top: 0;
 }
 
 input[type="submit"] {
